// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add replyMarkup to the last supported message 1`] = `
Array [
  Object {
    "node": <Photo
      url="http://machinat.com/foo.jpg"
    />,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "parameters": Object {
        "caption": undefined,
        "disable_notification": true,
        "parse_mode": "HTML",
        "photo": "http://machinat.com/foo.jpg",
        "reply_markup": Object {
          "force_reply": true,
          "selective": undefined,
        },
        "reply_to_message_id": undefined,
      },
      "uploadingFiles": undefined,
    },
  },
  Object {
    "node": <ChatAction
      action="upload_photo"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "method": "sendChatAction",
      "parameters": Object {
        "action": "upload_photo",
      },
    },
  },
]
`;

exports[`add replyMarkup to the last supported message 3`] = `
Array [
  Object {
    "node": <Expression
      disableNotification={true}
      replyMarkup={<ForceReply />}
    >
      foo
      <Photo
        replyMarkup={<ForceReply />}
        url="http://machinat.com/foo.jpg"
      />
    </Expression>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "method": "sendMessage",
      "parameters": Object {
        "disable_notification": true,
        "parse_mode": "HTML",
        "reply_markup": Object {
          "force_reply": true,
          "selective": undefined,
        },
        "text": "foo",
      },
    },
  },
  Object {
    "node": <Photo
      replyMarkup={<ForceReply />}
      url="http://machinat.com/foo.jpg"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "parameters": Object {
        "caption": undefined,
        "disable_notification": true,
        "parse_mode": "HTML",
        "photo": "http://machinat.com/foo.jpg",
        "reply_markup": Object {
          "force_reply": true,
          "selective": undefined,
        },
        "reply_to_message_id": undefined,
      },
      "uploadingFiles": undefined,
    },
  },
]
`;

exports[`hoist text value into message object 1`] = `undefined`;

exports[`respect the original disableNotification setting set on the messgage 1`] = `
Array [
  Object {
    "node": <Photo
      url="http://machinat.com/bar.jpg"
    />,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "parameters": Object {
        "caption": undefined,
        "disable_notification": true,
        "parse_mode": "HTML",
        "photo": "http://machinat.com/bar.jpg",
        "reply_markup": undefined,
        "reply_to_message_id": undefined,
      },
      "uploadingFiles": undefined,
    },
  },
  Object {
    "node": <Photo
      disableNotification={false}
      url="http://machinat.com/baz.jpg"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "parameters": Object {
        "caption": undefined,
        "disable_notification": false,
        "parse_mode": "HTML",
        "photo": "http://machinat.com/baz.jpg",
        "reply_markup": undefined,
        "reply_to_message_id": undefined,
      },
      "uploadingFiles": undefined,
    },
  },
]
`;

exports[`set disableNotification in message parameters 1`] = `undefined`;
